gap fix

--- a/client/css/post-upload.styl
+++ b/client/css/post-upload.styl
@@ -27,6 +27,10 @@ $cancel-button-color = tomato
         &:not(.uploading) .cancel
             display: none
 
+        &.inactive .control-strip
+        &.uploading .control-strip
+            gap: 0
+
     .dropper-container
         margin: 0 auto
         .file-dropper
